<resources>
    <string name="app_name">LibreHealth</string>
    <string name="profile">PROFILE</string>
    <string name="records">RECORDS</string>
    <string name="hospital">HOSPITAL</string>
    <string name="growth_analyser">GROWTH ANALYSER</string>
    <string name="medicine">MEDICINE</string>
    <string name="name">Name</string>
    <string name="search">SEARCH</string>
    <string name="editext_date">Birth Date (dd/mm/yyyy)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
