<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.SearchActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/editText_search_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textCapWords"
        android:shadowColor="@color/colorPrimary"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/editext_date"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_search_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:onClick="date_picker"
        android:inputType="date"
        android:shadowColor="@color/colorPrimary"
        android:drawableEnd="@drawable/ic_calendar"
        android:drawablePadding="4dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="ID provided at child registartion"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_search_did"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:inputType="textShortMessage"
        android:shadowColor="@color/colorPrimary"
        android:drawablePadding="4dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:onClick="button_search"
        android:text="@string/search" />
</LinearLayout>
</LinearLayout>